public/css/globals/global.css
/* SECTION - FONT */
@font-face {
    font-family: "Archivo";
    src: url("/fonts/archivo-light.woff2") format("woff2");
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: "Archivo";
    src: url("/fonts/archivo-regular.woff2") format("woff2");
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "Archivo";
    src: url("/fonts/archivo-medium.woff2") format("woff2");
    font-weight: 500;
    font-style: normal;
}

@font-face {
    font-family: "Archivo";
    src: url("/fonts/archivo-bold.woff2") format("woff2");
    font-weight: 600;
    font-style: normal;
}

@font-face {
    font-family: "Archivo";
    src: url("/fonts/archivo-semi-bold.woff2") format("woff2");
    font-weight: 700;
    font-style: normal;
}

html,
body {
    font-family: Archivo;
    font-weight: 300;
    position: relative;
}

.container {
    width: 80%;
    margin: auto;
}

@media (max-width: 1200px) {
    .container {
        width: 95%;
    }
}

b,
strong {
    font-family: Archivo;
    font-weight: 700;
}

b.semi,
strong.semi {
    font-family: Archivo;
    font-weight: 600;
}

/* !SECTION - FONT */

/* SECTION - BUTTONS */
.button,
button {
    border-radius: 1rem;
    padding: 0.25rem 1rem;
    border-width: 0;
    text-transform: uppercase;
    font-weight: 600;
    cursor: pointer;
    color: white;
    transition: background-color 0.2s;
}

.button {
    text-decoration: none;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.button.wide,
button.wide {
    padding: 0.25rem 1.5rem;
}

.button.icon-for-button,
button.icon-for-button {
    padding: 0 5px;
    border-radius: 32px;
    width: 40px !important;
    height: 40px !important;
    display: flex;
    align-items: center;
}

@media (max-width: 700px) {
    .button.icon-for-button,
    button.icon-for-button {
        border-radius: 70px;
        width: 50px !important;
        height: 50px !important;
    }
}

.button.icon-for-button>img,
button.icon-for-button>img {
    margin: auto;
}

.button.primary,
button.primary {
    background-color: var(--highlight-color);
}

.button.primary:hover,
button.primary:hover {
    background-color: color-mix(in srgb, var(--highlight-color) 80%, black 20%);
}

.button.secondary,
button.secondary {
    background-color: var(--secondary-highlight-color);
}

.button.secondary:hover,
button.secondary:hover {
    background-color: color-mix(in srgb, var(--secondary-highlight-color) 80%, black 20%);
}

/* !SECTION - BUTTONS */

/* SECTION - SIZES */
.w-100 {
    width: 100%;
}

/* !SECTION - SIZES */

/* SECTION - TEXT */
.text-light {
    color: var(--light-text-color);
}

.block {
    display: block;
}

/* SECTION - FONT WEIGHT */
.fw-400 {
    font-weight: 400;
}

.fw-500 {
    font-weight: 500;
}

.fw-600 {
    font-weight: 600;
}

.fw-700 {
    font-weight: 700;
}

/* !SECTION - FONT WEIGHT */

/* SECTION - LINE HEIGHT */
.lh-05 {
    line-height: 0.5rem;
}

.lh-1 {
    line-height: 1rem;
}

.lh-15 {
    line-height: 1.5rem;
}

.lh-2 {
    line-height: 2rem;
}

.lh-25 {
    line-height: 2.5rem;
}

.lh-3 {
    line-height: 3rem;
}

.lh-35 {
    line-height: 3.5rem;
}

.lh-4 {
    line-height: 4rem;
}

.lh-45 {
    line-height: 4.5rem;
}

.lh-5 {
    line-height: 5rem;
}

/* !SECTION - LINE HEIGHT */

/* SECTION - FONT SIZES */
.fs-05 {
    font-size: clamp(0.35rem, 0.3rem + 0.3vw, 0.5rem);
}

.fs-1 {
    font-size: clamp(0.7rem, 0.65rem + 0.4vw, 1rem);
}

.fs-125 {
    font-size: clamp(0.9rem, 0.8rem + 0.5vw, 1.25rem);
}

.fs-15 {
    font-size: clamp(1.05rem, 0.9rem + 0.6vw, 1.5rem);
}

.fs-2 {
    font-size: clamp(1.4rem, 1.2rem + 0.8vw, 2rem);
}

.fs-25 {
    font-size: clamp(1.75rem, 1.5rem + 1vw, 2.5rem);
}

.fs-3 {
    font-size: clamp(2.1rem, 1.8rem + 1.2vw, 3rem);
}

.fs-35 {
    font-size: clamp(2.45rem, 2.1rem + 1.4vw, 3.5rem);
}

.fs-4 {
    font-size: clamp(2.8rem, 2.4rem + 1.6vw, 4rem);
}

.fs-45 {
    font-size: clamp(3.15rem, 2.7rem + 1.8vw, 4.5rem);
}

.fs-5 {
    font-size: clamp(3.5rem, 3rem + 2vw, 5rem);
}

.fs-h1 {
    font-size: clamp(1.75rem, 1.2rem + 4.5vw, 3rem);
}

.fs-h2 {
    font-size: clamp(1.375rem, 1rem + 3.2vw, 2.25rem);
}

.fs-h3 {
    font-size: clamp(1.125rem, 0.95rem + 2.0vw, 1.75rem);
}

.fs-h4 {
    font-size: clamp(1rem, 0.9rem + 1.2vw, 1.25rem);
}

.fs-h5 {
    font-size: 1rem;
}

.fs-h6 {
    font-size: 0.875rem;
}

/* tablet */
@media (max-width: 1200px) {
    .fs-05-tab {
        font-size: clamp(0.35rem, 0.3rem + 0.3vw, 0.5rem);
    }

    .fs-1-tab {
        font-size: clamp(0.7rem, 0.65rem + 0.4vw, 1rem);
    }

    .fs-125-tab {
        font-size: clamp(0.9rem, 0.8rem + 0.5vw, 1.25rem);
    }

    .fs-15-tab {
        font-size: clamp(1.05rem, 0.9rem + 0.6vw, 1.5rem);
    }

    .fs-2-tab {
        font-size: clamp(1.4rem, 1.2rem + 0.8vw, 2rem);
    }

    .fs-25-tab {
        font-size: clamp(1.75rem, 1.5rem + 1vw, 2.5rem);
    }

    .fs-3-tab {
        font-size: clamp(2.1rem, 1.8rem + 1.2vw, 3rem);
    }

    .fs-35-tab {
        font-size: clamp(2.45rem, 2.1rem + 1.4vw, 3.5rem);
    }

    .fs-4-tab {
        font-size: clamp(2.8rem, 2.4rem + 1.6vw, 4rem);
    }

    .fs-45-tab {
        font-size: clamp(3.15rem, 2.7rem + 1.8vw, 4.5rem);
    }

    .fs-5-tab {
        font-size: clamp(3.5rem, 3rem + 2vw, 5rem);
    }
}

/* mobile */
@media (max-width: 700px) {
    .fs-05-mob {
        font-size: clamp(0.35rem, 0.3rem + 0.3vw, 0.5rem);
    }

    .fs-1-mob {
        font-size: clamp(0.7rem, 0.65rem + 0.4vw, 1rem);
    }

    .fs-125-mob {
        font-size: clamp(0.9rem, 0.8rem + 0.5vw, 1.25rem);
    }

    .fs-15-mob {
        font-size: clamp(1.05rem, 0.9rem + 0.6vw, 1.5rem);
    }

    .fs-2-mob {
        font-size: clamp(1.4rem, 1.2rem + 0.8vw, 2rem);
    }

    .fs-25-mob {
        font-size: clamp(1.75rem, 1.5rem + 1vw, 2.5rem);
    }

    .fs-3-mob {
        font-size: clamp(2.1rem, 1.8rem + 1.2vw, 3rem);
    }

    .fs-35-mob {
        font-size: clamp(2.45rem, 2.1rem + 1.4vw, 3.5rem);
    }

    .fs-4-mob {
        font-size: clamp(2.8rem, 2.4rem + 1.6vw, 4rem);
    }

    .fs-45-mob {
        font-size: clamp(3.15rem, 2.7rem + 1.8vw, 4.5rem);
    }

    .fs-5-mob {
        font-size: clamp(3.5rem, 3rem + 2vw, 5rem);
    }
}

/* for buttons with bigger texts we need more rounding */
.button.fs-05,
button.fs-05 {
    border-radius: 0.5rem;
}

.button.fs-1,
button.fs-1 {
    border-radius: 1rem;
}

.button.fs-15,
button.fs-15 {
    border-radius: 1.5rem;
}

.button.fs-2,
button.fs-2 {
    border-radius: 2rem;
}

.button.fs-25,
button.fs-25 {
    border-radius: 2.5rem;
}

.button.fs-3,
button.fs-3 {
    border-radius: 3rem;
}

.button.fs-35,
button.fs-35 {
    border-radius: 3.5rem;
}

.button.fs-4,
button.fs-4 {
    border-radius: 4rem;
}

.button.fs-45,
button.fs-45 {
    border-radius: 4.5rem;
}

.button.fs-5,
button.fs-5 {
    border-radius: 5rem;
}

/* !SECTION - FONT SIZES */

.t-justify {
    text-align: justify;
    text-align-last: justify;
}

.t-uppercase {
    text-transform: uppercase;
}

.t-a-center {
    text-align: center;
}

.t-a-end {
    text-align: end;
}

/* !SECTION - TEXT */

/* SECTION - DISPLAY */
.show-till-tab { display: inline-block; }
.show-till-mob { display: inline-block; }
.show-tab { display: none; }
.show-mob { display: none; }

@media (max-width: 1200px) {
    .show-till-tab { display: none !important; }
    .show-tab { display: inline-block; }
}

@media (max-width: 700px) {
    .show-till-mob { display: none !important; }
    .show-mob { display: inline-block; }
}

/* !SECTION - DISPLAY */

